<resources>
    <string name="app_name">Протоколы</string>
    <string name="main_activity">Главная страница</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_filter">Фильтр</string>
    <string name="str_login">Введите имя пользователя</string>
    <string name="str_password">Введите пароль</string>
    <string name="str_enter">Войти</string>
    <string name="error">Ошибка</string>
    <string name="credentials">Евгений Николаев</string>
    <string name="role">Тестовый пользователь</string>
    <string name="delete_record">удалить</string>
    <string name="update_record">изменить</string>
    <string name="num_pa">ПА</string>
    <string name="num_sa">C/А</string>
    <string name="desc">Описание</string>
    <string name="status">Статус</string>
    <string name="new_protocol">Создать протокол</string>
    <string name="auth">Авторизация</string>
    <string name="str_act">Введите № С/А:</string>
    <string name="str_prot">Введите № протокола:</string>
    <string name="str_desc">Краткое описание:</string>
    <string name="str_add">Добавить</string>
    <string name="str_cancel">Отмена</string>
    <string name="str_upd">Обновить</string>
    <string name="update_title">Обновить запись</string>
    <string name="str_status">Статус:</string>
    <string name="str_sort">Сортировка</string>
    <string name="str_checkbox">Запомнить меня</string>
    <string name="str_switch1">Скрыть готовые</string>
    <string name="str_switch2">Только мои</string>
    <string name="action_backup">Backup DB</string>
    <string name="first_date">Дата создания протокола:</string>
    <string name="last_date">Дата последнего изменения:</string>
    <string name="action_fillDB">Заполнить БД</string>
    <string name="str_author">Автор: </string>
    <string name="str_firstdate">Дата 1:</string>
    <string name="str_lastdate">Дата 2:</string>
    <string name="extra_new_records">Extra new records</string>
    <string name="nav_stats">Статистика</string>
    <string name="nav_exit">Выход</string>
    <string name="nav_main">Главная</string>
    <string name="stats_title">Статистика</string>
    <string name="str_stage">Этап: </string>
    <string name="str_failure_type">Вид отказа:</string>

    <string-array name="status_array">
        <item>Подготовка</item>
        <item>Канцелярия</item>
        <item>Заказчик</item>
        <item>Готов</item>
        <item>Отмена</item>
    </string-array>

    <string-array name="stages_array">
        <item>Регулировка</item>
        <item>Испытания</item>
        <item>ШМР</item>
        <item>Эксплуатация</item>
        <item>Сервисное обслуживание</item>
        <item>Сборка</item>
        <item>Вх. контроль</item>
        <item>Прогон</item>
        <item>Техтряска</item>
    </string-array>

    <string-array name="failure_type_array">
        <item>Технологический</item>
        <item>Конструктивный</item>
        <item>Эксплуатационный</item>
        <item>ПКИ</item>
        <item>Производственный</item>
        <item>Неподтвердившийся</item>
        <item>Технологический, Конструктивный</item>
        <item>Технологический, Производственный</item>
        <item>Производственный, Конструктивный</item>
        <item>Технологический, Конструктивный, Производственный</item>
        <item>ПКИ, Конструктивный</item>
        <item>ПКИ, Производственный</item>
        <item>ПКИ, Эксплуатационный</item>
        <item>Неустановленный</item>
    </string-array>

    <string-array name="author_array">
        <item>onad015</item>
        <item>onad017</item>
        <item>onad013</item>
        <item>onad019</item>
        <item>onad001</item>
    </string-array>
</resources>
