<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ru.steeshock.protocols.ui.MainActivity">

    <item
        android:id="@+id/action_sort"
        android:orderInCategory="100"
        android:title="@string/action_filter"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_backup"
        android:orderInCategory="100"
        android:title="@string/action_backup"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_fillDB"
        android:orderInCategory="100"
        android:title="@string/action_fillDB"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_extraNewRecords"
        android:orderInCategory="100"
        android:title="@string/extra_new_records"
        app:showAsAction="never" />

</menu>
