<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginStart="60dp"
    android:layout_marginEnd="60dp"
    android:layout_marginTop="70dp">

    <EditText
        android:id="@+id/et_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:hint="@string/str_login"
        android:textAlignment="center"
        android:textSize="7pt"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:hint="@string/str_password"
        android:textAlignment="center"
        android:textStyle="italic"
        android:textSize="7pt"/>

    <Button
        android:id="@+id/btn_login"
        android:text="@string/str_enter" style="@style/Widget.AppCompat.Button.Borderless"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>