<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/tvProtocolNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="18dp"
        android:text="@string/str_prot"
        android:textSize="16sp"
        android:textStyle="italic|bold" />

    <EditText
        android:id="@+id/etProtocolNumber"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvProtocolNumber"
        android:layout_alignParentStart="true"
        android:layout_marginStart="224dp"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvActNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tvProtocolNumber"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="60dp"
        android:text="@string/str_act"
        android:textSize="16sp"
        android:textStyle="italic|bold" />

    <EditText
        android:id="@+id/etActNumber"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvActNumber"
        android:layout_alignStart="@+id/etProtocolNumber"
        android:layout_marginStart="0dp"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvActNumber"
        android:layout_alignStart="@+id/tvProtocolNumber"
        android:layout_marginTop="18dp"
        android:text="@string/str_desc"
        android:textSize="16sp"
        android:textStyle="italic|bold" />

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="268dp"
        android:layout_height="50dp"
        android:layout_above="@+id/tvStatus"
        android:layout_below="@+id/tvDescription"
        android:layout_alignStart="@+id/tvProtocolNumber"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="13dp"
        android:textAlignment="viewStart"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvStatus"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tvProtocolNumber"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="300dp"
        android:text="@string/str_status"
        android:textAlignment="textStart"
        android:textSize="16sp"
        android:textStyle="italic|bold" />

    <Spinner
        android:id="@+id/spinnerStatus"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tvStatus"
        android:layout_alignBottom="@+id/tvStatus"
        android:layout_marginStart="12dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/tvActNumber"
        android:entries="@array/status_array" />

    <TextView
        android:id="@+id/tvStage"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tvProtocolNumber"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="257dp"
        android:text="@string/str_stage"
        android:textAlignment="textStart"
        android:textSize="16sp"
        android:textStyle="italic|bold" />

    <Spinner
        android:id="@+id/spinnerStage"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tvStatus"
        android:layout_alignBottom="@+id/tvStage"
        android:layout_marginStart="12dp"
        android:layout_marginTop="42dp"
        android:layout_toEndOf="@+id/tvActNumber"
        android:entries="@array/stages_array" />

    <TextView
        android:id="@+id/tvFailureType"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tvProtocolNumber"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="219dp"
        android:text="@string/str_failure_type"
        android:textAlignment="textStart"
        android:textSize="14sp"
        android:textStyle="italic|bold" />

    <Spinner
        android:id="@+id/spinnerFailureType"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tvStatus"
        android:layout_alignBottom="@+id/tvFailureType"
        android:layout_marginStart="12dp"
        android:layout_marginTop="79dp"
        android:layout_toEndOf="@+id/tvActNumber"
        android:entries="@array/failure_type_array" />

    <Button
        android:id="@+id/btn_add"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="35dp"
        android:layout_marginBottom="35dp"
        android:background="@color/colorPrimary"
        android:text="@string/str_upd"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btn_cancel"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/btn_add"
        android:layout_marginEnd="35dp"
        android:background="@color/colorPrimary"
        android:text="@string/str_cancel"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/lblFirstDate"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tvUsername"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-5dp"
        android:layout_marginBottom="183dp"
        android:text="@string/first_date"
        android:textAlignment="center"
        android:textSize="10sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/lblLastDate"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tvUsername"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-5dp"
        android:layout_marginBottom="162dp"
        android:text="@string/last_date"
        android:textAlignment="center"
        android:textSize="10sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tvFirstDate"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:textAlignment="textStart"
        android:textSize="12sp"
        android:textStyle="italic|bold" />

    <TextView
        android:id="@+id/tvFirstDate"
        android:layout_width="wrap_content"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/lblFirstDate"
        android:layout_toEndOf="@+id/tvProtocolNumber"
        android:textSize="10sp"
        android:textStyle="italic"/>

    <TextView
        android:id="@+id/tvLastDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/tvFirstDate"
        android:layout_alignBottom="@+id/lblLastDate"
        android:textSize="10sp"
        android:textStyle="italic"/>


</RelativeLayout>