<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.MainActivity"
    tools:showIn="@layout/app_bar_main">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp">

        <TextView
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginStart="5dp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/num_pa"/>


        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/desc"/>

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/status"/>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp">


    </android.support.v7.widget.RecyclerView>

    <FrameLayout
        android:id="@+id/fragmentContainer"
        android:layout_gravity="center"
        android:layout_width="200dp"
        android:layout_height="270dp">


    </FrameLayout>


</FrameLayout>